2011-10-27  Ian Lance Taylor  <iant@google.com>

	* cppdefault.c: Undef NATIVE_SYSTEM_HEADER_DIR if
	CROSS_DIRECTORY_STRUCTURE is defined and TARGET_SYSTEM_ROOT is
	not.
	(cpp_include_defaults): Only use NATIVE_SYSTEM_HEADER_DIR if it is
	defined.

2011-10-27  Richard Henderson  <rth@redhat.com>

	* optabs.c (expand_vec_perm): Use the correct mode for scaling the
	selector.  Save the qimode constant selector for later use by the
	qimode vec_perm pattern.

2011-10-27  Bernd Schmidt  <bernds@codesourcery.com>

	* config/c6x/c6x.c (unit_req_imbalance, res_mii): Cast the first arg
	to unit_req_factor to the right enum type.
	(get_unit_operand_masks, reshuffle_units, try_rename_operands,
	hwloop_optimize): Remove unused variables.

2010-10-27  Richard Guenther  <rguenther@suse.de>

	PR middle-end/50731
	* tree-vect-generic.c (do_binop): Handle scalar operands.

2011-08-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/37191
	* config/i386/sse.md (*vec_extract_v4sf_mem): Avoid combining registers
	from different units in a single alternative.

2011-10-26  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.c (emit_scc_insn): Force attempt of v9 sequences
	if we're comparing DImode and comparison is other than EQ or NE.

	* config/sparc/sparc.c (emit_scc_insn): Do not try v9 sequences until
	LEU/LTU/GEU/GTU is attempted.
	* config/sparc/sparc.md (*neg_snesi_sign_extend): New 64-bit insn
	and split.
	(*neg_seqsi_sign_extend): Likewise.
	(*sltu_extend_sp64, *neg_sltu_extend_sp64, *sgeu_extend_sp64,
	*neg_sgeu_extend_sp64): New insns.

	* config/sparc/sparc-protos.h (sparc_expand_conditional_move): Declare.
	* config/sparc/sparc.md (mov<I:mode>cc, mov<F:mode>cc): Call it.
	(*mov<I:mode>_cc_v9): Normalize to expect operand 0 always in operand 4.
	(*mov<I:mode>_cc_reg_sp64): Likewise.
	(*movsf_cc_v9): Likewise.
	(*movsf_cc_reg_sp64): Likewise.
	(*movdf_cc_v9): Likewise.
	(*movdf_cc_reg_sp64): Likewise.
	(*movtf_cc_hq_v9): Likewise.
	(*movtf_cc_reg_hq_sp64): Likewise.